# platform.prebuilts.misc

./: Android.bp  BUILD.bazel  OWNERS  \
.prebuilt_info/: prebuilt_info_common_ddmlib_annotations-prebuilt_jar.asciipb  prebuilt_info_common_ddmlib_common-prebuilt_jar.asciipb  prebuilt_info_common_ddmlib_ddmlib-prebuilt_jar.asciipb
android-arm/gdbserver/: Android.mk
android-x86_64/gdbserver64/: Android.mk
androidx-test/: Android.bp
common/android-support-test/: Android.bp
common/androidx-media3/: Android.bp  update-from-gmaven.py
common/androidx-perf/: Android.bp
common/androidx-test/: Android.bp  PREBUILT  prepend-license.txt  update-from-gmaven.py
common/asm/: Android.bp  PREBUILT
common/atf/: Android.bp  PREBUILT
common/commons-cli/: Android.bp  PREBUILT
common/ddmlib/: PREBUILT
common/flickerlib/: OWNERS
common/frameworks/: Android.bp  PREBUILT
common/incfs/: OWNERS  README.md
common/jacoco/: Android.bp
common/json/: Android.bp
common/jython/: Android.bp
common/kxml2/: Android.bp
common/layoutlib_api/: PREBUILT
common/ninepatch/: PREBUILT
common/robolectric/: Android.bp  robotest-internal.mk
common/robolectric/3.1.1/: run_robotests.mk
common/robolectric/3.4.2/: run_robotests.mk
common/sdk-common/: PREBUILT
common/sdklib/: PREBUILT
common/tools-common/: PREBUILT
common/ub-uiautomator/: PREBUILT
common/winscope/: intDefMapping.json  winscope.html
gdbserver/: Android.bp
protobuf_vendorcompat/: Android.bp
protobuf_vendorcompat/arm/: PREBUILT
protobuf_vendorcompat/arm64/: PREBUILT
(+634 files in other folders)
